# credscan

./: .gitignore  .pre-commit-hooks.yaml  Dockerfile  Dockerfile.gui  Dockerfile.gui.local  MANIFEST.in  README.md  SECURITY.md  TESTING.md  action.yml  consolidated_patterns.txt  credential-file.txt  credscan-architecture.excalidraw  credscan-report-20250701-215550.json  fly.toml  generated_smart_patterns.py  requirements.txt  setup.cfg  test_enhanced.py
.claude/skills/credscan-architect/: SKILL.md
.claude/skills/terminal-design/: DESIGN.md  SKILL.md
.github/workflows/: ci.yml  docker-publish.yml
benchmarks/: README.md  run.py  throughput.py
benchmarks/corpus/: labels.json
benchmarks/corpus/clean/: config_safe.py  hashes_and_ids.py  public_cert.pem  settings_safe.yaml
benchmarks/corpus/leaky/: aws_app.py  deploy.yml  main.tf  more_tokens.env  private_key.pem  service_tokens.json
config/: comprehensive_patterns.json  known_test_credentials.json  technology_files.json  technology_patterns.json
config/wordlists/: cloud_provider_files.txt  env_files.txt
demo/aws/: config.yaml  credentials.py
demo/cicd/: github_actions_leaky.yml  gitlab_ci_leaky.yml
demo/clean/: safe_code.py
demo/database/: config.json  connections.py
demo/docker/: Dockerfile
demo/entropy/: high_entropy.py
demo/iac/: cloudformation.yaml  main.tf
demo/mixed/: app_config.env
docs/: DEPLOY.md  logo-brief.md
src/config/: set.json
src/credscan/: .credscan-hook.conf  cli.py  compliance.py  config_paths.py  diff.py  engine_factory.py  file_cache.py  remediation.py
src/credscan.egg-info/: PKG-INFO  SOURCES.txt
src/credscan/analyzers/: __init__.py  entropy.py
src/credscan/baseline/: __init__.py  manager.py
src/credscan/config/: config_example.yaml  context_patterns.json  enhanced-config.yaml  supported_extensions.json
src/credscan/core/: __init__.py  engine.py  parser_base.py
src/credscan/detection/: __init__.py  rules.py
src/credscan/enhanced/: __init__.py  confidence_scorer.py  config_integration.py  context_analyzer.py  context_aware_engine.py  entropy_analyzer.py  pattern_library.py  pattern_structure.py  result_deduplicator.py  rule_engine_integration.py  (+1 more)
tests/: test_aws_extraction.py  test_benchmark.py  test_breach_checker.py  test_cicd_parser.py  test_compliance.py  test_diff_mode.py  test_e2e.py  test_gui.py  test_iac_parser.py  test_integration.py  test_precision.py  test_remediation.py  test_reporter_security.py  test_sarif.py  test_token_validator.py  test_verification_metric.py  test_web_ssrf.py
tests/enhanced/: test_enhanced_detection.py
tools/: analyze_keywords.py  generate_smart_patterns.py  test_patterns.py
(+48 files in other folders)
