[metadata]
name = credscan
version = attr: credscan.__version__
description = credential and secret detection tool
long_description = file: README.md
long_description_content_type = text/markdown
author = TOLUGIT
author_email = toluwanimibanji@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Security
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pyyaml>=6.0
    requests>=2.25

[options.extras_require]
aws =
    boto3>=1.26
reports =
    pandas>=1.3
    openpyxl>=3.0
    fpdf2>=2.5
dev =
    pytest>=7.0
    pytest-cov>=4.0
    boto3>=1.26

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    credscan = credscan.cli:main
