[metadata]
name = credscan
version = attr: credscan.__version__
description = credential and secret detection tool
long_description = file: README.md
long_description_content_type = text/markdown
author = TOLUGIT
author_email = toluwanimibanji@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Security
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pyyaml>=6.0
    requests>=2.25
    beautifulsoup4>=4.9

[options.extras_require]
aws =
    boto3>=1.26
reports =
    pandas>=1.3
    openpyxl>=3.0
    fpdf2>=2.5
gui =
    fastapi>=0.110
    uvicorn>=0.27
    python-multipart>=0.0.9
dev =
    pytest>=7.0
    pytest-cov>=4.0
    boto3>=1.26
    beautifulsoup4>=4.9
    fastapi>=0.110
    uvicorn>=0.27
    python-multipart>=0.0.9
    httpx>=0.27

[options.packages.find]
where = src

[options.package_data]
credscan =
    config/*.json
    config/*.yaml
    config/wordlists/*
    gui/static/*

[options.entry_points]
console_scripts =
    credscan = credscan.cli:main
    credscan-gui = credscan.gui.server:main
